@@ -3,10 +3,14 @@
 CoLo 1.11 (xxxx-xx-xx)
 ----------------------
 
+*	You can now break out of the boot menu via the console.
+
 *	Added man pages for 'colo-perm' and 'md5rom'.
 	[Martin Michlmayr]
 
 *	Added 'e2fsck-lcd', file check progress bar on LCD.
+
+*	Fixed LCD second row offset (all over).
 
 CoLo 1.10 (2004-05-23)
 ----------------------
